objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ASI_BRD_Total_No_of_Bottles_Activated__c</fullName>
        <label>Total No. of Bottles Activated</label>
        <summarizedField>CampaignMember.ASI_BRD_No_of_Bottles_Scratch_Win__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drupal_event_creation__c</fullName>
        <label>Drupal event creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_End_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(TEXT(EndDate) &amp; &apos; 23:59:00&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Activer_reponse_MMPJ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ce champ déterminera si les viticulteurs pourront répondre ou pas à l&apos;invitation depuis le site MMPJ et Moi.</description>
        <label>Activer réponse MMPJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cible__c</fullName>
        <label>Cible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tout Cognac</fullName>
                </value>
                <value>
                    <fullName>Tout Champagne</fullName>
                </value>
                <value>
                    <fullName>Tout le monde</fullName>
                </value>
                <value>
                    <fullName>Segmentation Champagne</fullName>
                </value>
                <value>
                    <fullName>Segmentation Cognac</fullName>
                </value>
                <value>
                    <fullName>Tout Cognac Partenaire</fullName>
                </value>
                <value>
                    <fullName>Segmentation Cognac Partenaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Heure_debut__c</fullName>
        <label>Heure de début (hh:mm)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Heure_fin__c</fullName>
        <label>Heure de fin (hh:mm)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Inscription_obligatoire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inscription obligatoire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_Public_Image_Vignette__c</fullName>
        <label>Lien Public Image Vignette</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_Public__c</fullName>
        <label>Lien Public Couverture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lieu__c</fullName>
        <label>Lieu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_personnes_accompagnant__c</fullName>
        <inlineHelpText>nombre total d&apos;accompagnants déclarés par les personnes inscrites</inlineHelpText>
        <label>Nombre de personnes accompagnantes</label>
        <summarizedField>CampaignMember.MMPJ_Ext_Accompagnants__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_personnes_inscrites__c</fullName>
        <inlineHelpText>Nombre total d&apos;invités ayant répondu Oui à l&apos;invitation</inlineHelpText>
        <label>Nombre de personnes inscrites</label>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Participation__c</field>
            <operation>equals</operation>
            <value>Accepté</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_total_personnes_prevues__c</fullName>
        <formula>MMPJ_XRM_Nombre_total_Inscrits__c + MMPJ_XRM_Nombre_total_accompagnateurs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nombre de personnes inscrites (incluant accompagnants) + Accompagnateurs MMPJ (incluant accompagnants)</inlineHelpText>
        <label>Nombre total de personnes prévues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nombre_accompagnant_max__c</fullName>
        <inlineHelpText>conjoint ou autres personnes supplémentaires par invitation</inlineHelpText>
        <label>Nombre d&apos;accompagnant maximum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nombre_de_places__c</fullName>
        <inlineHelpText>Accompagnateurs interne compris</inlineHelpText>
        <label>Nombre de places</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_nombre_invit_societe__c</fullName>
        <description>Indique le nombre de places alloués pour chaque société</description>
        <inlineHelpText>Ce nombre comprend le nombre d&apos;accompagnants maximum</inlineHelpText>
        <label>Nombre d&apos;invitations / société</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_places_limites_societe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indique si le nombre d&apos;invitations est limité par société</description>
        <label>Places limités par société</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Start_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(TEXT(StartDate) &amp; &apos; &apos; &amp; LEFT(TEXT(MYPJ_Start_Time__c),2) &amp; &apos;:&apos; &amp; MID(TEXT(MYPJ_Start_Time__c),4,2) &amp; &apos;:00&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Afficher_Description_MMPJmoi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDC-773.  Champ qui permet de déterminer si la description de l&apos;événement doit être affiché ou non</description>
        <label>Afficher description dans MMPJ&amp;Moi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Campagne_Principale__c</fullName>
        <description>permet d&apos;indiquer qu&apos;il s&apos;agit d&apos;une campagne principale</description>
        <label>Est une campagne principale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                    <label>✅</label>
                </value>
                <value>
                    <fullName>false</fullName>
                    <label>❌</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Cout_Reel_par_Personne__c</fullName>
        <description>utilisé pour avoir le budget par invité de chaque event</description>
        <formula>IF(
    OR(
        ISBLANK(ActualCost),
        MMPJ_Ext_Vign_Nb_total_personnes_prevues__c = 0
    ), 0 ,
    ActualCost / MMPJ_Ext_Vign_Nb_total_personnes_prevues__c
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Coût réel dans la campagne / Nombre total de personnes prévues</inlineHelpText>
        <label>Coût réel par invité</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Date_limite_inscription__c</fullName>
        <inlineHelpText>Les invités pourront s&apos;inscrire via l&apos;email d&apos;invitation jusqu&apos;à cette date, une fois cette date passée, un message leur indiquera que les inscriptions sont fermées</inlineHelpText>
        <label>Date limite d&apos;inscription</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nb_Accompagnants_Accompagnateur__c</fullName>
        <description>Correspond ici aux accompagnants des accompagnateurs MMPJ</description>
        <label>Nb Accompagnants chez les Accompagnateur</label>
        <summarizedField>MMPJ_XRM_AccompagnateursMMPJ__c.nombre_accompagnants__c</summarizedField>
        <summaryForeignKey>MMPJ_XRM_AccompagnateursMMPJ__c.MMPJ_XRM_Campagne__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nb_total_accompagnants_inscrits__c</fullName>
        <label>Nombre total d&apos;accompagnants inscrits</label>
        <summarizedField>CampaignMember.MMPJ_Ext_Accompagnants__c</summarizedField>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Participation__c</field>
            <operation>equals</operation>
            <value>Accepté</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nombre_Presents__c</fullName>
        <formula>MMPJ_XRM_Tech_Accompagnants_venus__c +  MMPJ_XRM_Tech_campagne_members_venus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nombre de personnes venues + leurs accompagnants (accompagnateurs MMJj et leurs accompagnants sont exclus)</inlineHelpText>
        <label>Nombre de présents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nombre_accompagnateursMMPJ__c</fullName>
        <description>nombre d’accompagnateurs au sein de la campagne - rollup summary</description>
        <label>Nombre d&apos;accompagnateurs MPJ</label>
        <summaryForeignKey>MMPJ_XRM_AccompagnateursMMPJ__c.MMPJ_XRM_Campagne__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nombre_de_refus__c</fullName>
        <label>Nombre de refus</label>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Participation__c</field>
            <operation>equals</operation>
            <value>Refusé</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nombre_total_Inscrits__c</fullName>
        <formula>MMPJ_Ext_Vign_Nb_personnes_inscrites__c  +  MMPJ_XRM_Nb_total_accompagnants_inscrits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nombre d&apos;invités inscrits + Nombre d&apos;accompagnants inscrits</inlineHelpText>
        <label>Nombre total d&apos;incrits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Nombre_total_accompagnateurs__c</fullName>
        <formula>MMPJ_XRM_Nombre_accompagnateursMMPJ__c  +  MMPJ_XRM_Nb_Accompagnants_Accompagnateur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accompagnateurs MMPJ + leurs accompagnants</inlineHelpText>
        <label>Nombre total d&apos;accompagnateurs MMPJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Sous_type__c</fullName>
        <label>Sous type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PSG</fullName>
                </value>
                <value>
                    <fullName>Stade de Reims</fullName>
                    <label>MPJ-Stade de Reims</label>
                </value>
                <value>
                    <fullName>Rubgy</fullName>
                    <label>MPJ-Rubgy</label>
                </value>
                <value>
                    <fullName>Karting</fullName>
                    <label>MPJ-Karting</label>
                </value>
                <value>
                    <fullName>Formule E</fullName>
                    <label>MPJ-Formule E</label>
                </value>
                <value>
                    <fullName>Voile</fullName>
                    <label>MPJ-Voile</label>
                </value>
                <value>
                    <fullName>Jumping</fullName>
                    <label>MPJ-Jumping</label>
                </value>
                <value>
                    <fullName>Espagne</fullName>
                    <label>MPJ-Espagne</label>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                    <label>MPJ-Cognac</label>
                </value>
                <value>
                    <fullName>Vins clairs</fullName>
                    <label>MPJ-Vins clairs</label>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                    <label>MPJ-Cocktail</label>
                </value>
                <value>
                    <fullName>Repas divers</fullName>
                    <label>MPJ-Repas divers</label>
                </value>
                <value>
                    <fullName>VDC</fullName>
                    <label>MPJ-VDC</label>
                </value>
                <value>
                    <fullName>Les matinales MPJ</fullName>
                    <label>MPJ-Les matinales MPJ</label>
                </value>
                <value>
                    <fullName>Golf</fullName>
                    <label>MPJ-Golf</label>
                </value>
                <value>
                    <fullName>Chasse</fullName>
                    <label>MPJ-Chasse</label>
                </value>
                <value>
                    <fullName>Jumping La Baule</fullName>
                    <label>MPJ-Jumping La Baule</label>
                </value>
                <value>
                    <fullName>Vendée Globe</fullName>
                    <label>MPJ-Vendée Globe</label>
                </value>
                <value>
                    <fullName>Habits de Lumière</fullName>
                    <label>MPJ-Habits de Lumière</label>
                </value>
                <value>
                    <fullName>Trophée Mumm</fullName>
                    <label>MPJ-Trophée Mumm</label>
                </value>
                <value>
                    <fullName>Réunion de printemps Livreurs</fullName>
                    <label>MPJ-Réunion de printemps Livreurs</label>
                </value>
                <value>
                    <fullName>Réunion pré-vendanges Livreurs</fullName>
                    <label>MPJ-Réunion pré-vendanges Livreurs</label>
                </value>
                <value>
                    <fullName>Divers</fullName>
                    <label>MPJ-Divers</label>
                </value>
                <value>
                    <fullName>Cabaret</fullName>
                    <label>MPJ-Cabaret</label>
                </value>
                <value>
                    <fullName>Concert</fullName>
                    <label>MPJ-Concert</label>
                </value>
                <value>
                    <fullName>Théâtre</fullName>
                    <label>MPJ-Théâtre</label>
                </value>
                <value>
                    <fullName>Opéra</fullName>
                    <label>MPJ-Opéra</label>
                </value>
                <value>
                    <fullName>Musée</fullName>
                    <label>MPJ-Musée</label>
                </value>
                <value>
                    <fullName>Expositions</fullName>
                    <label>MPJ-Expositions</label>
                </value>
                <value>
                    <fullName>Défilé de Mode</fullName>
                    <label>MPJ-Défilé de Mode</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Synchro_Drupal__c</fullName>
        <label>Synchro Drupal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Envoi OK</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Envoi rejeté</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Synchro OK</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Tech_Accompagnants_venus__c</fullName>
        <label>Nombre d&apos;accompagnants venus</label>
        <summarizedField>CampaignMember.MMPJ_Ext_Accompagnants__c</summarizedField>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Presence__c</field>
            <operation>equals</operation>
            <value>Venu</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Tech_campagne_members_venus__c</fullName>
        <label>Nombre d&apos;Invités présents</label>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Presence__c</field>
            <operation>equals</operation>
            <value>Venu</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MYPJ_Activate_website_reservation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate website reservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MYPJ_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Freeflow</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYPJ_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ambassador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MYPJ_Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Booking_Phone_number__c</fullName>
        <label>Booking Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MYPJ_Booking_URL__c</fullName>
        <description>Eventia link</description>
        <label>Booking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MYPJ_Champagnes__c</fullName>
        <label>Champagnes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BE 07</fullName>
                </value>
                <value>
                    <fullName>BE 04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYPJ_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Comment_from_Ambassador__c</fullName>
        <label>Comment from Ambassador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MYPJ_Date_start_reflecting_calendar__c</fullName>
        <label>Date to start reflecting on calendar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYPJ_Distributed_event_card_number__c</fullName>
        <label>Distributed event card number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Event_Overview__c</fullName>
        <label>Event Overview</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MYPJ_Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MYPJ_Hotel_Name__c</fullName>
        <formula>MYPJ_Venue_Name__r.MYPJ_Hotel_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Make_event_code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make event code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MYPJ_Memo__c</fullName>
        <label>Memo (internal use)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MYPJ_Number_of_participants__c</fullName>
        <label>Number of participants</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MYPJ_Place_City__c</fullName>
        <formula>MYPJ_Venue_Name__r.MYPJ_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Place City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Place_Name__c</fullName>
        <formula>MYPJ_Venue_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Place Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Price__c</fullName>
        <label>Price (tax included)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MYPJ_Private_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MYPJ_Reception_Start_Time__c</fullName>
        <inlineHelpText>Entry to the event start time</inlineHelpText>
        <label>Reception Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>MYPJ_Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>MYPJ_Venue_Details__c</fullName>
        <formula>MYPJ_Venue_Name__r.MYPJ_Venue_details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Place Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Venue_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Place Name</label>
        <referenceTo>MYPJ_Venue__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MYPJ_Venue_Website__c</fullName>
        <formula>MYPJ_Venue_Name__r.MYPJ_Venue_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_Working_Hours_for_booking__c</fullName>
        <label>Working Hours for Booking</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYPJ_display_on_event_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on event Calendar</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ASI_BRD_MY_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>MYA_</value>
        </filters>
        <label>All ASI Brand Campaign (MY)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_MY_All_Brands_Users</group>
            <group>ASI_LUX_MY_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_PH_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>PHL_</value>
        </filters>
        <label>All ASI Brand Campaign (PH)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_PH_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_SG_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>SGN_</value>
        </filters>
        <label>All ASI Brand Campaign (SG)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_SG_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_TH_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>THA_</value>
        </filters>
        <label>All ASI Brand Campaign (TH)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_TH_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_VN_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>VNM_</value>
        </filters>
        <label>All ASI Brand Campaign (VN)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_VN_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campagnes_MPJ</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>MMPJ_XRM_Sous_type__c</columns>
        <columns>MMPJ_Ext_Vign_Lieu__c</columns>
        <columns>MMPJ_Ext_Vign_Nb_total_personnes_prevues__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Cible__c</field>
            <operation>equals</operation>
            <value>Tout Champagne,Segmentation Champagne</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Mathilde</value>
        </filters>
        <label>Campagnes MPJ</label>
    </listViews>
</CustomObject>